<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id ="@+id/edit_restaurant_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:autofillHints=""
        android:hint="Restaurant" />

    <EditText
        android:id ="@+id/edit_cuisine_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Cuisine"
        android:inputType="text"
        android:autofillHints=""
        android:layout_below="@id/edit_restaurant_name"
        android:layout_alignParentStart="true" />

    <EditText
        android:id ="@+id/edit_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Address"
        android:inputType="text"
        android:autofillHints=""
        android:layout_below="@id/edit_cuisine_type"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/edit_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Phone number"
        android:inputType="phone"
        android:autofillHints=""
        android:layout_below="@id/edit_address"
        android:layout_alignParentStart="true" />
</RelativeLayout>