<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_foods"
        android:title="Dishes"
        android:icon="@drawable/ic_food"/>
    <item android:id="@+id/nav_restaurants"
        android:title="Restaurant"
        android:icon="@drawable/ic_restaurant"/>
    <item android:id="@+id/nav_about"
        android:title="About"
        android:icon="@drawable/ic_about"/>
</menu>