<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/note_food_text"
        android:layout_width="match_parent"
        android:layout_height="604dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="13dp"
        android:text="No notes for this food"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:textSize="30sp"
        android:background="#ADD8E6" />
</RelativeLayout>
