<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id ="@+id/edit_food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Food"
        android:inputType="text"
        android:autofillHints="" />
</RelativeLayout>